Kubernetes/YAML/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      microservice: discovery-server
  template:
    metadata:
      labels:
        app: petclinic
        microservice: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: harbor.parasoft.com/ctp/springcommunity/spring-petclinic-discovery-server:latest
        imagePullPolicy: Always
        command: ["./dockerize"]
        args: ["-wait=tcp://config-server:8888", "-timeout=60s", "--", "java", "org.springframework.boot.loader.JarLauncher"]
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  ports:
  - port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app: petclinic
    microservice: discovery-server
