Kubernetes/YAML/tracing-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      microservice: tracing-server
  template:
    metadata:
      labels:
        app: petclinic
        microservice: tracing-server
    spec:
      containers:
      - name: tracing-server
        image: openzipkin/zipkin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: tracing-server
spec:
  ports:
  - port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    app: petclinic
    microservice: tracing-server
